--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,14 @@ dependencies:
     sdk: flutter
   page_transition: ^2.0.2
   animated_splash_screen: ^1.0.1+2
-  flutter_spinkit: ^4.1.2
+  flutter_spinkit: ^5.1.0
   google_fonts: ^1.1.1
   animated_text_kit: ^4.2.1
-  flutter_svg: ^0.22.0
+  flutter_svg: ^0.23.0+1
   shared_preferences: ^2.0.6
+  image_picker: ^0.6.7
+  tflite: ^1.1.1
+  camera: ^0.5.8+7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,6 +57,10 @@ flutter:
   assets:
     - images/
   #   - images/a_dot_ham.jpeg
+    - models/ssd_mobilenet.tflite
+    - models/labels.txt
+    - models/face_model.tflite
+    - models/labels2.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
